--- a/.github/workflows/Auto Build self.yml
+++ b/.github/workflows/Auto Build self.yml
@@ -1,10 +1,10 @@
-name: Auto Build
+name: Auto Build self
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+#on:
+  #push:
+  #  branches:
+  #    - main
+  #pull_request:
   workflow_dispatch:
 
 jobs:
